@@ -498,6 +498,61 @@
 				</TCEforms>
 				<type>array</type>
 				<el>
+					<source>
+						<TCEforms>
+							<label>LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_source</label>
+							<config>
+								<type>select</type>
+								<items type="array">
+									<numIndex index="0" type="array">
+										<numIndex index="0">LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_source_frompage</numIndex>
+										<numIndex index="1">page</numIndex>
+									</numIndex>
+									<numIndex index="1" type="array">
+										<numIndex index="0">LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_source_fromplugin</numIndex>
+										<numIndex index="1">plugin</numIndex>
+									</numIndex>
+									<numIndex index="2" type="array">
+										<numIndex index="0">LLL:EXT:bzd_staff_directory/locallang_db.xml:pi_flexform_source_fromteamleaders</numIndex>
+										<numIndex index="1">teamleaders</numIndex>
+									</numIndex>
+								</items>
+								<maxitems>1</maxitems>
+								<size>1</size>
+								<default>page</default>
+							</config>
+						</TCEforms>
+					</source>
+					<source_plugin>
+						<TCEforms>
+							<exclude>1</exclude>
+							<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.source_fromplugin</label>
+							<config>
+								<type>group</type>
+								<internal_type>db</internal_type>
+								<allowed>tx_bzdstaffdirectory_persons</allowed>
+								<size>5</size>
+								<maxitems>99</maxitems>
+								<minitems>0</minitems>
+								<show_thumbs>1</show_thumbs>
+							</config>
+						</TCEforms>
+					</source_plugin>
+					<source_teamleaders>
+						<TCEforms>
+							<exclude>1</exclude>
+							<label>LLL:EXT:bzd_staff_directory/locallang_db.php:tt_content.pi_flexform.source_fromteamleaders</label>
+							<config>
+								<type>group</type>
+								<internal_type>db</internal_type>
+								<allowed>tx_bzdstaffdirectory_groups</allowed>
+								<size>5</size>
+								<maxitems>99</maxitems>
+								<minitems>0</minitems>
+								<show_thumbs>1</show_thumbs>
+							</config>
+						</TCEforms>
+					</source_teamleaders>
 					<detailPage>
 						<TCEforms>
 							<exclude>1</exclude>
